--- a/src/Components/Clientes.css
+++ b/src/Components/Clientes.css
@@ -7,7 +7,7 @@
     outline: none;
     font-weight: bold;
     text-decoration: none;
-    width: 60%;
+    width: 150px;
     margin-top: 20px;
 }
 
