--- a/src/Components/Mascotas/AgregarMascota.css
+++ b/src/Components/Mascotas/AgregarMascota.css
@@ -32,14 +32,15 @@
 }
 
 .select_especie {
-    height: 35px;
-    width: 310px;
+    height: 40px;
+    width: 300px;
     font-size: 1.1rem;
+    border: 2px solid black;
 }
 
 .container_campo input {
     width: 300px;
-    height: 25px;
+    height: 40px;
     font-size: 1.1rem;
 }
 
