--- a/src/Components/Turnos/AgendarTurno.css
+++ b/src/Components/Turnos/AgendarTurno.css
@@ -43,8 +43,8 @@
 
 .btn:hover{
     background-color: rgb(141, 65, 141);
-    border-radius: 15px;
-    /* padding: 10px; */
+    border-radius: 30px;
+    padding: 10px;
     border: 1px solid lightgray;
     color: white;
 }
