--- a/src/Components/Adopciones/Adopciones.css
+++ b/src/Components/Adopciones/Adopciones.css
@@ -13,6 +13,11 @@
   padding-bottom: 0;
 }
 
+.tarjeta_adopciones > .cuerpo{
+  overflow: hidden;
+  width: 100%;
+}
+
 .tarjeta_adopciones {
   width: 20%;
   display: flex;
