--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -6,14 +6,53 @@
     bottom: 0;
     width: 100%;
     height: 6rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
 }
 
 
-.huellitasFooter {
+#footer ul {
+    list-style-type: none;
+}
+
+#div-footer-logo {
     width: 5%;
+    margin-right: auto;
+    margin-left: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
 
-.text {
-    width: 90%;
-    margin-left: -50px;
+#div-footer-contenido{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 7%;
+    width: 93%;
+    height: 100%;
+}
+
+#div-footer-contenido div {
+    height: fit-content;
+    margin-top: auto;
+}
+
+#div-footer-contenido > div > ul{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0;
+}
+
+#div-footer-contenido > div > p {
+    margin-top: auto;
+    font-size: 12px;
+    margin-bottom: 0;
+}
+#div-footer-copyright{
+    margin-top: auto;
 }
