se agregan cambios en quienes somos

--- a/src/Components/Publico/Inicio.css
+++ b/src/Components/Publico/Inicio.css
@@ -102,6 +102,6 @@
     margin-left: 40px;
     font-size: 50px;
     font-weight: bold;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-style: italic;
-}
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+  }
