--- a/src/Components/Publico/QuienesSomos.css
+++ b/src/Components/Publico/QuienesSomos.css
@@ -3,20 +3,24 @@
     filter: brightness(50%);    
 }
 
-
+.navbar {
+    z-index: 2;
+    position: sticky;
+    top: 0;
+    background-color: white;
+}
+   
 .txt{
     margin-top: 550px;
-    padding-top: 80px;
+     padding-top: 80px;
     padding-left: 100px;
-    padding-right: 55px;
     font-size: 1.3rem;
     width: 170%;
-    height: 800px;
+    height: 900px;
     text-align: justify, right;
     font-family: 'Overpass', sans-serif;
     font-weight: bold;
-    /* color: rgb(93, 91, 91);  */
-    color: white;
+    color: rgb(117, 114, 114);
 }
 
 .pa{
@@ -26,22 +30,22 @@
     font-family: 'Overpass', sans-serif;
     text-align: left;
     font-weight: bold;
-    color: whitesmoke   
+    color: rgb(117, 114, 114);
 
 }
 
 .txt2{
  
-    margin-top: 550px;;
-    padding-bottom: 280px;
+    margin-top: 550px;
+    padding-left: 700px;
     width: 250%;
     height: 200px;
     font-size: 1.3rem;
     line-height: 1.5;
     text-align: left;
-    font-family: 'Overpass', sans-serif;
     font-weight: bold;
-    color:white;
+    font-family: 'Overpass', sans-serif;
+    color: rgb(117, 114, 114);
 }
 
 
@@ -69,9 +73,10 @@
     
 }
 .card{
-    justify-content:space-between;
+   
+    margin: 30px 50px;
     border: 1px solid lightgray;
-    box-shadow: 2px 2px 2px 2px #d3d3d3d4;
+    box-shadow: 2px 2px 8px 4px #d3d3d3d4;
 }
 .logoblanco{
     height: 35px;
