--- a/src/Components/Publico/QuienesSomos.css
+++ b/src/Components/Publico/QuienesSomos.css
@@ -1,36 +1,45 @@
+.navbar {
+    z-index: 2; 
+    position: sticky;
+    top: 0;
+    background-color: white; 
+}
 
 .oscurecer {
     filter: brightness(50%);    
 }
 
-.navbar {
-    z-index: 2;
-    position: sticky;
-    top: 0;
-    background-color: white;
-}
-   
+.img-fluid{
+    width: 100%;
+    height: 650px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+   }
+
 .txt{
     margin-top: 550px;
      padding-top: 80px;
     padding-left: 100px;
     font-size: 1.3rem;
     width: 170%;
-    height: 900px;
+    height: 600px;
     text-align: justify, right;
     font-family: 'Overpass', sans-serif;
-    font-weight: bold;
-    color: rgb(117, 114, 114);
+    font-weight: normal;
+    color: white;
 }
 
 .pa{
-    width: 100%;
-    height: 350px;
+    width: 50%;
+    height: 200px;
     font-size: 1.3rem;
+    text-align:left;
     font-family: 'Overpass', sans-serif;
-    text-align: left;
-    font-weight: bold;
-    color: rgb(117, 114, 114);
+    font-weight: normal;
+    color: white;
+ 
 
 }
 
@@ -41,11 +50,11 @@
     width: 250%;
     height: 200px;
     font-size: 1.3rem;
-    line-height: 1.5;
+    line-height: 1.3;
     text-align: left;
     font-weight: bold;
     font-family: 'Overpass', sans-serif;
-    color: rgb(117, 114, 114);
+    color: white;
 }
 
 
@@ -58,26 +67,38 @@
     display: center;
     align-items: center;
     margin-left: 35px;
-    
+    color: black;
+    font-weight: bold;
     
 }
 
 .card-title{
     font-family: 'Overpass', sans-serif;
-    color: rgb(93, 91, 91);
+    color: black;
     font-weight: bold;
 }
 .card-text{
+  
     font-family: 'Overpass', sans-serif;
-    color: rgb(93, 91, 91);
+    color: black;
+    font-weight: bold;
+
     
 }
 .card{
    
-    margin: 30px 50px;
-    border: 1px solid lightgray;
-    box-shadow: 2px 2px 8px 4px #d3d3d3d4;
+    display: block;
+     max-width: 80%;
+      height: auto;
+      margin: 30px 50px;
+      border: 1px solid lightgray;
+      box-shadow: 2px 2px 8px 4px #d3d3d3d4;
 }
 .logoblanco{
     height: 35px;
 }
+
+.card-img-top{
+    display: block; max-width: 100%; height: auto; 
+}
+
